--- a/utils/dbs/my.cnf
+++ b/utils/dbs/my.cnf
@@ -1,7 +1,7 @@
 [client]
-database = Myblog
-user = xingxing
-password = xingxing
+database = djf
+user = dog
+password = 123456
 host = 127.0.0.1
 port = 3306
 default-character-set = utf8mb4
