--- a/utils/dbs/my.cnf
+++ b/utils/dbs/my.cnf
@@ -1,7 +1,7 @@
 [client]
-database = myblog
-user = dog
-password = 123456
+database = djf
+user = root
+password = wsjhl1518
 host = 127.0.0.1
 port = 3306
 default-character-set = utf8mb4
