--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.13
 django-redis==5.2.0
 importlib-metadata==4.11.3
 packaging==21.3
+Pillow==9.1.0
 PyMySQL==1.0.2
 pyparsing==3.0.8
 pytz==2022.1
