--- a/utils/dbs/my.cnf
+++ b/utils/dbs/my.cnf
@@ -1,7 +1,7 @@
 [client]
-database = djf
-user = root
-password = wsjhl1518
+database = myblog
+user = xingxing
+password = xingxing
 host = 127.0.0.1
 port = 3306
 default-character-set = utf8mb4
